--- a/charts/poc/Chart.yaml
+++ b/charts/poc/Chart.yaml
@@ -1,11 +1,9 @@
 apiVersion: v1
-name: ghost
+name: poc
 version: 9.0.4
-appVersion: 3.1.1
-description: A simple, powerful publishing platform that allows you to share your stories with the world
+appVersion: 1.0.0
+description: A simple poc
 keywords:
-- ghost
-- blog
 - http
 - web
 - application
@@ -16,6 +14,6 @@ icon: https://bitnami.com/assets/stacks/ghost/img/ghost-stack-220x234.png
 sources:
 - https://github.com/bitnami/bitnami-docker-ghost
 maintainers:
-- name: Bitnami
-  email: containers@bitnami.com
+- name: Topcoder
+  email: admin@topcoder.com
 engine: gotpl
